-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0, 6.2.1
-
f622090b1d92a5b71688964fb67e0cab4407c69c 4c930e9d13738ac0faaaed3aa5b1c34509b04019
Hi,
When I launch a simple QML page over HTTP with the qml/qmlscene tools (they both have the same issue) the http request is malformed.
It's easy to reproduce it, you can launch a simple http server and launch a file with qml/qmlscene from it.
For exemple locally with PHP :
php -S 127.0.0.1:9000 -t /home/gpercepied/Documents/workspace/brouillon
Then try to launch main.qml (which is a simple rectangle) with qml or qmlscene :
qml http://127.0.0.1:9000/main.qml
Then I've got this error from qml :
QQmlApplicationEngine failed to load component
http://127.0.0.1:9000/main.qml: Remote host closed the connection
qml: Did not load any objects, exiting.
And this error from php server :
[Thu Nov 25 14:05:49 2021] 127.0.0.1:36762 Accepted [Thu Nov 25 14:05:49 2021] 127.0.0.1:36762 Invalid request (Malformed HTTP request) [Thu Nov 25 14:05:49 2021] 127.0.0.1:36762 Closing
It works fine with the same configuration and file with qt 5.15
For Gerrit Dashboard: QTBUG-98642 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
383363,3 | QNAM: Disable h2c by default | dev | qt/qtbase | Status: MERGED | +2 | 0 |
383364,5 | QNAM: Reintroduce h2c with an attribute | dev | qt/qtbase | Status: MERGED | +2 | 0 |
383751,2 | QNAM: Disable h2c by default | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |